--- a/Configuration.html
+++ b/Configuration.html
@@ -1,21 +1,22 @@
-<HTML>
+<html>
 <head>
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff">
 <h1>CGIpaf 1.0rc4 Configuration</h1>
 <h1>Content</h1>
-<UL>
+<ul>
 <li><a href="#syntax">Syntax</a></li>
-</UL>
-<UL>
+</ul>
+<ul>
 <li><a href="#sections">Sections</a></li>
-</Ul>
-<UL>
+</ul>
+<ul>
 <li><a href="#directives">Directives</a></li>
-<UL>
+<ul>
 <li><a href="#syslog">syslog</a></li>
 <li><a href="#loglevel">loglevel</a></li>
+<li><a href="#pam_service">pam_service</a></li>
 <li><a href="#document_root">document_root</a></li>
 <li><a href="#login_document">login_document</a></li>
 <li><a href="#error_loginname">error_loginname</a></li>
@@ -54,11 +55,21 @@
 <li><a href="#error_deldotforward">error_deldotforward</a></li>
 <li><a href="#error_deldotprocmailrc">error_deldotprocmailrc</a></li>
 <li><a href="#error_openvacations">error_openvacations</a></li>
-</UL>
-</UL>
-<UL>
+<li><a href="#error_updateprocmailrc">error_updateprocmailrc</a></li>
+</ul>
+</ul>
+<ul>
 <li><a href="#variables">Variables</a></li>
-</UL>
+</ul>
+<ul>
+<li><a href="#redirect">Redirect</a></li>
+</ul>
+<ul>
+<li><a href="#htmlfile">HTML files</a></li>
+</ul>
+<ul>
+<li><a href="#command">run_success and run_locked scripts</a></li>
+</ul>
 <h1><a name="syntax">Syntax</a></h1>
 <p>    
   The configuration file (cgipaf.conf) contains one directive per lines. 
@@ -66,7 +77,7 @@
   Everything after a hash ( # ) is ignored. Empty lines and whitespaces are 
   also ignored.
     
-  If a directive appears more than onces the last one is used. 
+  If a directive appears more than ones the last one is used. 
     
   Sections are grouped between &lt;section_name&gt; ...
 &lt/section_name&gt, the
@@ -111,6 +122,27 @@ e.g. if loglevel is set to 1 (LOG_ALERT) messages with loglevel 0 (LOG_EMERG) ar
 <tr><td><b>7</b></td><td>LOG_DEBUG</td><td> debug-level message</td></tr>
 </table>
 </p>
+</p>
+</p>
+<h2><a name="pam_service">pam_service</a></h2>
+<p><strong>Syntax:</strong> pam_service <em>pam service name</em><br>
+<strong>Default:</strong> passwd<br>
+<strong>Context:</strong> global, &lt;passwd&gt;, &lt;mailcfg&gt;<br>
+<p>
+Set the pam service name, if not set "passwd" is used. The passwd pam service
+( /etc/pam.d/passwd ) usually doesn't have an entry for user authentication, 
+therefor /etc/pam.d/other has to have a line auth set to pam_unix.so.
+<pre><code><tt>
+	auth     required       pam_unix.so
+</tt></code></pre>
+If you don't like this for security reason etc, you can set the pam_service
+directive to "cgipaf" and create the file /etc/pam.d/cgipaf that looks like this<pre><code><tt>
+	auth     required       pam_unix.so
+        password required       pam_unix.so md5
+</tt></code></pre>
+If your system don't support md5 passwords remove md5 in the password line.
+CGIpaf doesn't support crack_lib or minimum / maximum password length options.
+You can set the <a href="#min_length">minimum</a> / <a href="#max_length">maximum</a> password length in cgipaf.conf.
 </p>
 </p>
 <h2><a name="document_root">document_root</a></h2>
@@ -174,7 +206,7 @@ error_math    Redirect <em>location</em><BR>
 error_tooshort   Redirect <em>location</em><BR>
 <strong>Default:</strong>  "Password too short...\n"<BR>
 <strong>Context:</strong>  &lt;passwd&gt;
-<P>    
+<p>    
     the password length is below <a href="#min_length">min_length</a>
 </p>       
 <h2><a name="error_torlong">error_toolong</a></h2>
@@ -376,8 +408,8 @@ accessdb.\n Please contact the webmaster"<br>
 /etc/resolv.conf<br>
 <strong>Context:</strong>  &lt;mailcfg&gt;
 <p>       
-     if autoreply is enabled a "X-loop: user@domainname" is added to the 
-     replyed mail to avoid mail looping. With the domain directive you can set 
+     A "X-loop: user@domainname" header is added to the forwarded or the
+     replied mail to avoid mail looping. With the domain directive you can set 
      the domainname in the "X-loop" header. If domain is not set mailcfg.cgi 
      will use hostname.nisadomainname, if your server isn't part of a NIS 
      domain it'll use the domain in /etc/resolv.conf.
@@ -391,7 +423,7 @@ accessdb.\n Please contact the webmaster"<br>
      runs a script is a password / mail configuration is successfully
      updated. Example:
 <pre><tt><code>
-     run_success "/usr/sbin/smbpasswd -U %{name}" "%{password}\n%{password}\n > /dev/null 2.&1"
+     run_success "/usr/sbin/smbpasswd -U %{name} &gt; /dev/null 2&gt;&amp;1" "%{password}\n%{password}\n"
 </code></tt></pre>    
      Will update the SAMBA password file.
 </p> 
@@ -412,7 +444,7 @@ accessdb.\n Please contact the webmaster"<br>
 </p>        
 <h2><a name="mailcfg_document">mailcfg_document</a></h2>
 <strong>Syntax:</strong>   mailcfg_document <em>filename</em>  <b>OR</b>
-mailcfg Redirect <em>Location</em><br>
+mailcfg_document Redirect <em>Location</em><br>
 <strong>Default:</strong> builtin message<br>
 <strong>Context:</strong>  &lt;mailcfg&gt;<br>
 <p>	
@@ -420,7 +452,7 @@ mailcfg Redirect <em>Location</em><br>
 </p>        
 <h2><a name="error_deldotforward">error_deldotforward</a></h2>
 <strong>Syntax:</strong>   error_deldotforward <em>filename</em>  <b>OR</b>
-mailcfg Redirect <em>Location</em><br>
+error_deldotforward Redirect <em>Location</em><br>
 <strong>Default:</strong> "Can't delete ~/.forward please contact the
 webmaster"<br>
 <strong>Context:</strong>  &lt;mailcfg&gt;<br>
@@ -429,7 +461,7 @@ webmaster"<br>
 </p>        
 <h2><a name="error_deldotprocmailrc">error_deldotprocmailrc</a></h2>
 <strong>Syntax:</strong>   error_deldotprocmailrc <em>filename</em>  <b>OR</b>
-mailcfg Redirect <em>Location</em><br>
+error_deldotprocmailrc Redirect <em>Location</em><br>
 <strong>Default:</strong> "Can't delete ~/.procmailrc please contact the
 webmaster"<br>
 <strong>Context:</strong>  &lt;mailcfg&gt;<br>
@@ -438,19 +470,33 @@ webmaster"<br>
 </p>        
 <h2><a name="error_openvacations">error_openvacations</a></h2>
 <strong>Syntax:</strong>   error_openvacations <em>filename</em>  <b>OR</b>
-mailcfg Redirect <em>Location</em><br>
+error_openvacations Redirect <em>Location</em><br>
 <strong>Default:</strong> "Can't open ~/.vacations.txt please contact the
 webmaster"<br>
 <strong>Context:</strong>  &lt;mailcfg&gt;<br>
 <p>	
      Unable to open ~/vacations.txt
-</p>        
-<H1><a name="variables">Variables</a></h1>
-<P>
-    For each document you can as use a plain html file with a few PHP
-    extensions (see bellow) or a redirect. Within a redirect you can use
-    the following variables: 
-</P>
+</p>
+<h2><a name="error_updateprocmailrc">error_updateprocmailrc</a></h2>
+<strong>Syntax:</strong>   error_updateprocmailrc <em>filename</em>  <b>OR</b>
+error_updateprocmailrc Redirect <em>Location</em><br>
+<strong>Default:</strong> "Can't update ~/.procmailrc, please contact the webmaster"
+webmaster"<br>
+<strong>Context:</strong>  &lt;mailcfg&gt;<br>
+<p>	
+     Unable to update ~/.procmailrc
+</p>
+"Can't update ~/.procmailrc, please contact the webmaster"
+
+<h1><a name="variables">Variables</a></h1>
+<p>
+    For each document you can as use a 
+    <a href="#htmlfile">plain html file</a> with a few PHP
+    extensions (see bellow) or a <a href="#redirect">redirect</a>. 
+    In a redirect, file or 
+    <a href="#run_success">run_success</a> and 
+    <a href="#run_locked">run_locked</a> you can use the following variables: 
+</p>
 <table>
 <tr><td><b>Variable name</b></td><td><b>Description</b></td></tr>
 <tr><td> </td><td> <td></tr>
@@ -480,8 +526,11 @@ seconds</td></tr>
 <tr><td><b>password</b></td><td>the user's new password, is only set at
 <a href="#run_success">run_success</a></td></tr>
 </table>
+<h1><a name="redirect">Redirect</a></h1>
 <p> 
 example:
+</p>
+<p>
 <code><tt><pre>      
        msg_success   redirect  /pwchanged.php?name="%{name}"
 </pre></tt></code>
@@ -490,6 +539,7 @@ example:
     Will redirect to /pwchanged.php?name="loginname" after a user has succeed
     to change his password.
 </p>
+<h1><a name="htmlfile">HTML files</a></h1>
 <p>
     If you don't use a redirect you can use plain html files with two PHP 
     extensions "include" and "echo". The same variables as by a redirect are 
@@ -502,6 +552,23 @@ example:
     Will print the user's name and include bottom.php. Please note that the
     PHP implementation is very limited. include("bottom.php") won't work for
     example.
+</p>
+<h1><a name="command">run_success and run_locked scripts</a></h1>
+<p>
+   With <a href="#run_success">run_success</a> and <a href="#run_locked">
+   run_locked</a> it's possible to run a script when a has update his 
+   password/mail configuration or when a user is locked out.
+</p>
+<p>
+   The first argument is the script name, the second argument is send to 
+   stdout. The second argument is usually used to pass the new password to
+   a script.
+</p>
+<p>
+  Example:
+  <pre><tt><code>
+  run_success "/usr/sbin/smbpasswd -U %{name} &gt; /dev/null 2&gt;&amp;1" "%{password}\n%{password}\n"
+  </code></tt></pre>
 </p>
 </body>
 </html>
