--- a/Configuration.html
+++ b/Configuration.html
@@ -418,7 +418,8 @@ error_pam  Redirect    <em>location</em><br>
 <strong>Default:</strong> off<br>
 <strong>Context:</strong> &lt;passwd&gt;
 <p>
-   Set the cracklib_dictpath
+   Set the cracklib_dictpath, the cracklib_dictpath should be set to the 
+   dictionary filename without the extension ( .pwi ), not the directory path.
 </p>
 <h2><a name="set_pam_change_expired_authtok">set_PAM_CHANGE_EXPIRED_AUTHTOK</a></h2>
 <strong>Syntax:</strong> set_PAM_CHANGE_EXPIRED_AUTHTOK <em>on</em>|<em>off</em><br>
