--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,8 @@
       <li>1.2 <a href="#ss1.2">Who secure is CGIpaf</a></li>
       <li>1.3 <a href="#ss1.3">Website</a></li>
       <li>1.4 <a href="#ss1.4">Mailinglist</a></li>
-      <li>1.5 <a href="#ss1.5">License</a></li>
+      <li>1.5 <a href="#ss1.5">Support</a></li>
+      <li>1.6 <a href="#ss1.6">License</a></li>
     </ul>
     
     <p>
@@ -125,7 +126,14 @@ for the correct location.
 </tr>
 </table>
 
-<h2><a name="ss1.5">1.5 </a> License</h2>
+<h2><a name="ss1.5">1.5 </a> Support</h2>
+
+<p>
+Please post your questions / install problems to mailinglist. I usually read my private email at the evening after my work but I follow the mailinglist during the workday, so you'll get the answer faster in the mailinglist.<br>
+Your problem can be useful to the other CGIpaf users...
+</p>
+
+<h2><a name="ss1.6">1.6 </a> License</h2>
 
 <p>
 CGIpaf is Free software published under the GNU Gernal Public License.<br>
@@ -379,7 +387,7 @@ I'm not sure how I'll resolve this problem I'm thinking of a "run_before_mailcfg
     <address><a href="mailto:staf.wagemakers@advalvas.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Wed May 22 05:42:00 CEST 2002
+Last modified: Wed Jun  5 13:51:50 CEST 2002
 <!-- hhmts end -->
   </body>
 </html>
