--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,7 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.0.1 Configuration</h1>
+<h1>CGIpaf 1.1.0pre2 Configuration</h1>
 <h1>Content</h1>
 <ul>
 <li><a href="#syntax">Syntax</a></li>
@@ -57,6 +57,7 @@
 <li><a href="#run_locked">run_locked</a></li>
 <li><a href="#run_before_mailcfg">run_before_mailcfg</a></li>
 <li><a href="#run_after_mailcfg">run_after_mailcfg</a></li>
+<li><a href="#run_mailcfg">run_mailcfg</a></li>
 <li><a href="#cookie_timeout">cookie_timeout</a></li>
 <li><a href="#mailcfg_document">mailcfg_document</a></li>
 <li><a href="#error_deldotforward">error_deldotforward</a></li>
@@ -474,7 +475,7 @@ error_pam  Redirect    <em>location</em><br>
 <p>
      CGIpaf creates a state file ( $HOME/.cgipaf_state ) in the user's home directory.
      This file contains the user's current mail configuration state. This file is used by
-     <a href="#run_before_mailcfg">run_before_mailcfg</a> and <a href="#run_after_mailcfg">run_after_mailcfg</a>.
+     <a href="#run_before_mailcfg">run_before_mailcfg</a>, <a href="#run_after_mailcfg">run_after_mailcfg</a> and <a href="#run_mailcfg">run_mailcfg</a>.
      <br>
      By default viewmailcfg.cgi doesn't use this file ( mainly for compatibility reasons ),
      but reads the user's .procmailrc to determine the user mail configuration.
@@ -484,6 +485,16 @@ error_pam  Redirect    <em>location</em><br>
      If your user's uses their own .procmailrc to distribute their mailinglists into separated
      mailboxes you must set "use_statefile" to "yes". The user's original .procmailrc
      could confuse CGIpaf.
+</p>
+<h2><a name="run_mailcfg">run_mailcfg</a></h2>
+<strong>Syntax:</strong> run_mailcfg   <em>path_to_script</em>
+<strong>Default:</strong> built-in procmailrc update</br>
+<strong>Run as:</strong> user<br>
+<strong>Context:</strong> &lt;mailcfg&gt;
+<p>
+     define a mail configuration script, if not set the built-in procmail
+     configuration updater is used<br>
+     if set, <a href="#use_statefile">use_statefile</a> is enabled.
 </p>
 <h2><a name="run_success">run_success</a></h2>
 <strong>Syntax:</strong> run_success   <em>path_to_script</em>
@@ -626,6 +637,9 @@ seconds</td></tr>
 <tr><td><b>pam_error</b></td><td>pam error message</td></tr>
 <tr><td><b>password</b></td><td>the user's new password, is only set at
 <a href="#run_success">run_success</a></td></tr>
+<tr><td><b>mailcfg_exitcode</b></td><td>exitcode of the <a href="#run_mailcfg">
+run_mailcfg script</td></tr>
+<tr><td><b>homedir</b></td><td>the user's home directory</td></tr>
 </table>
 <h1><a name="redirect">Redirect</a></h1>
 <p> 
