--- a/Configuration.html
+++ b/Configuration.html
@@ -640,6 +640,7 @@ seconds</td></tr>
 <tr><td><b>mailcfg_exitcode</b></td><td>exitcode of the <a href="#run_mailcfg">
 run_mailcfg script</td></tr>
 <tr><td><b>homedir</b></td><td>the user's home directory</td></tr>
+<tr><td><b>domain</b></td><td>the <href="#domain">domain</a>name, only set by mailcfg.cgi</td></tr>
 </table>
 <h1><a name="redirect">Redirect</a></h1>
 <p> 
